<resources>
    <string name="app_name">EmergencyEscape</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!--Log in and register and splash screen-->
    <string name="reg_title">Register</string>
    <string name="login_title">Log In</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="button_register">Register</string>
    <string name="button_login">Log In</string>
    <string name="button_cancel">Cancel</string>
    <string name="loader_text">Welcome</string>
    <string name="title_activity_maps">Map</string>
    <string name="getMap">Get Map</string>
    <string name="mainApp">Emergency Escapes</string>
    <string name="getBuildingPlan">Get Building Plan</string>
    <string name="settings">Settings</string>
    <string name="menu_settings_save">Save</string>
    <string name="buildingPlan">Building Plan</string>
    <string name="todo">TODO</string>
    <string name="hintEmailPassword">"PLEASE ENTER AN EMAIL AND PASSWORD"</string>
    <string name="updatedPassword">Password Updated Correctly</string>
    <string name="hint_passwordCurrent">Current Password</string>
    <string name="hint_passwordNew">New Password</string>
    <string name="passwords_not_same">Please enter new passwords that are the same</string>
    <string name="emptyBoxes">Please fill in all the boxes please</string>
    <string name="regBtn">Don\'t have an account ? Sign up</string>
    <string name="logBtn">Already have an account ? Log In</string>
    <string name="loginBtn">Login</string>
    <string name="registerBtn">Register</string>
    <string name="help">Help</string>
    <string name="info">Information</string>
    <string name="signOut">Log Out</string>
    <string name="appAbout">About Escaper</string>
    <string name="changePassword">Change Password</string>
    <string name="appDesc">App shows emergency escapes and sounds alarm</string>
    <string name="appMoreInfo">For more information about Polish Landmarks application or to provide feedback email :
        kacperwoloszyn4@gmail.com
    </string>
    <string name="appHelpExtraRemove">When an emergency happens, the arduino is going to either buzz the alarm or pick
        up the sound of the microphone. When that occurs, an emergency route will be drawn.
    </string>
    <string name="appHelpExtraRate">If the location is on, you will see location latitude and longitude and based on
        that a building plan will be downloaded
    </string>
    <string name="appHelp">This is the help screen for Emergency Escape</string>
    <string name="appHelpExtraAdd">Turn on the location option on your device so that the application will see where you
        are now
    </string>
    <string name="getbluetooth">Bluetooth arduino</string>
    <string name="bluetoothaddress">Bluetooth Address: </string>
    <string name="deactivate">Deactivate Account</string>
    <string name="welcome">Welcome</string>
    <string name="bluetooth">Bluetooth Connection To Arduino</string>
    <string name="bluetoothname"> Name of Device: </string>
    <string name="email"> Email :</string>
    <string name="password"> New Password :</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="dijstra">DIJSTRA</string>
    <string name="external_dir"> Get Building Blan</string>
    <string name="save">Save</string>
</resources>
