<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="ie.cm.activities.Home">

    <item android:id="@+id/menu_help"
          android:title="@string/help"
          android:orderInCategory="100"
          android:onClick="menuHelp"
          app:showAsAction="never" />

    <item android:id="@+id/menu_info"
          android:title="@string/info"
          android:orderInCategory="100"
          android:onClick="menuInfo"
          app:showAsAction="never" />

    <item
            android:id="@+id/menu_changePassword"
            android:title="@string/changePassword"
            android:orderInCategory="100"
            android:onClick="menuChangePassword"
            app:showAsAction="never"/>

    <item
            android:id="@+id/menu_deactivate"
            android:title="@string/deactivate"
            android:orderInCategory="100"
            android:onClick="menudeactivate"
            app:showAsAction="never"/>
</menu>