<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="org.wit.emergencyescape.activities.Home" android:background="@drawable/ggf">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/relativeLayout">

        <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:fitsSystemWindows="true"
                app:elevation="0dip"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbarMainScreen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:titleTextColor="@color/colorWhite"
                    app:title="@string/mainApp"
            />
        </com.google.android.material.appbar.AppBarLayout>
    </RelativeLayout>
    <Button
            android:text="@string/getMap"
            android:layout_width="0dp"
            android:layout_height="203dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/buttonGetMap"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
            app:layout_constraintHorizontal_bias="0.502" android:onClick="map"/>
    <Button
            android:text="@string/getBuildingPlan"
            android:layout_width="0dp"
            android:layout_height="204dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/buttonGetBuildingPlan"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonGetMap" android:onClick="buildingplan"
    />
    <Button
            android:text="@string/getbluetooth"
            android:layout_width="398dp"
            android:layout_height="64dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="11dp"
            android:id="@+id/bluetooth" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonGetBuildingPlan" android:onClick="bluetooth"/>
</androidx.constraintlayout.widget.ConstraintLayout>