<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".activities.Help"
                                             tools:layout_editor_absoluteY="81dp">

    <TextView
            android:id="@+id/textView5"
            android:layout_width="299dp"
            android:layout_height="43dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:text="@string/appHelpExtraRemove"
            app:layout_constrainedHeight="true"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
            android:id="@+id/textView4"
            android:layout_width="299dp"
            android:layout_height="43dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:text="@string/appHelpExtraRate"
            app:layout_constrainedHeight="true"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constrainedHeight="true"
            app:layout_constrainedWidth="true"
            app:srcCompat="@android:drawable/ic_menu_help"
            tools:layout_editor_absoluteX="2dp"
            tools:ignore="MissingConstraints" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbarHelp"/>

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarHelp"
            android:layout_width="381dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constrainedHeight="true"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.461"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="0dp"/>

    <TextView
            android:id="@+id/textView"
            android:layout_width="259dp"
            android:layout_height="75dp"
            android:text="@string/appHelp"
            app:layout_constrainedHeight="true"
            app:layout_constrainedWidth="true"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            android:layout_marginStart="20dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbarHelp"/>

    <TextView
            android:id="@+id/textView2"
            android:layout_width="299dp"
            android:layout_height="44dp"
            android:layout_marginStart="44dp"
            android:layout_marginEnd="8dp"
            android:text="@string/appHelpExtraAdd"
            app:layout_constrainedHeight="true"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="56dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>
</androidx.constraintlayout.widget.ConstraintLayout>