<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="org.wit.emergencyescape.activities.MainScreen">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="12dp" android:id="@+id/linearLayout">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/settings_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/hint_email"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"/>
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="374dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/hint_passwordCurrent"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"/>

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/settings_password"
                android:layout_width="374dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/hint_passwordNew"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"/>
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/settings_passwordconfirm"
                android:layout_width="374dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/hint_passwordNew"
                android:inputType="text"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"/>

    </LinearLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/relativeLayout">

        <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:fitsSystemWindows="true"
                app:elevation="0dip"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbarSettings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:titleTextColor="@color/colorWhite"
            />
        </com.google.android.material.appbar.AppBarLayout>
    </RelativeLayout>
    <Button
            android:text="@string/menu_settings_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/item_settings_save" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>
</androidx.constraintlayout.widget.ConstraintLayout>